# ve-tls-cpp-sdk

./: .gitignore  CMakeLists.txt  README.md  Tls.proto  genpb.sh  notice
demo/: CMakeLists.txt  main.cc
sdk/include/: Tls.pb.h  TlsClient.h  TlsClientConfig.h  TlsJsonConversion.h  TlsModel.h  TlsRequest.h  TlsResponse.h
sdk/include/http/: Credential.h  Http.h  HttpRequest.h  HttpResponse.h  SignKeyInfo.h  SignV4.h
sdk/include/utils/: BaseUtils.h  HeaderUtils.h
sdk/src/: Tls.pb.cc  TlsClient.cc  TlsJsonConversion.cc  TlsRequest.cc  TlsResponse.cc
sdk/src/http/: Http.cc  SignV4.cc
sdk/src/utils/: BaseUtils.cc
